# CCF

./: .env.example  .gitignore  .~lock.ccf.docx#  CLAUDE.md  COMPONENT-2-CHECKLIST.md  COMPONENT_4_COMPLETE.md  COMPONENT_5_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_COMPONENT_5.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_59.md  IMPLEMENTATION_SUMMARY_80.md  IMPLEMENTATION_SUMMARY_91.md  IMPLEMENTATION_SUMMARY_95.md  IMPLEMENTATION_SUMMARY_95_COMPONENT_4.md  LICENSE  PATENTS.md  README.md  README_VOICE_ASSISTANT.md  STORY_93_SUMMARY.md  jest.config.js  package.json  playwright.config.ts  pytest.ini  tsconfig.json  verify-component-2.sh
.claude/: memory.db
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json  daemon.pid
.swarm/: memory.db  model-router-state.json  schema.sql  state.json
audit/: 2026-04-27-cognitum-seed-first-connection.md  PHASE_0_REPORT.md  api-discovered.txt  api-from-explorer.txt  api-probe-results.json  phase0_ingest_log.json  phase0_ingest_probe.py
ccf-py/: Cargo.toml  README.md  pyproject.toml
ccf-py/python/ccf_core/: __init__.py  __main__.py  coherence_field_py.py  demo.py  ollama_middleware.py  persistence.py  social_phase.py  text_context_key.py
ccf-py/src/: lib.rs
crates/ccf-cognitum/: Cargo.toml
crates/ccf-cognitum/src/: frame.rs  lib.rs  sensors.rs  window.rs
crates/ccf-cognitum/tests/: integration.rs
crates/mbot-companion/: Cargo.toml
crates/mbot-companion/examples/: color_detection_demo.rs  nfc_storage_demo.rs  sorting_demo.rs  type_classification_demo.rs
crates/mbot-companion/src/: lib.rs  main.rs  protocol.rs  tictactoe_logic.rs  transport.rs  websocket_v2.rs
crates/mbot-companion/src/brain/: coherence_persist.rs  consolidation.rs  downward.rs  episodes.rs  error.rs  group_manager.rs  habits.rs  mincut.rs  mod.rs  recomputation.rs  relational_graph.rs  stt.rs  suppression_learner.rs  suppression_sync.rs  voice_api.rs
crates/mbot-companion/src/brain/autonomy/: actions.rs  context.rs  cron.rs  event_bus.rs  explore.rs  mod.rs
crates/mbot-companion/src/brain/channels/: discord.rs  mod.rs  telegram.rs
crates/mbot-companion/src/brain/coherence/: boundary.rs  mod.rs  warm_start.rs
crates/mbot-companion/src/brain/llm/: claude.rs  config.rs  mod.rs  ollama.rs
crates/mbot-companion/src/brain/memory/: activity.rs  conversation.rs  crystallization.rs  followup.rs  mod.rs  store.rs
crates/mbot-companion/src/brain/narrator/: mod.rs  reflection.rs  templates.rs
crates/mbot-companion/src/brain/planner/: action_translator.rs  mod.rs  prompt_builder.rs  safety.rs
crates/mbot-companion/src/brain/voice/: capture.rs  mod.rs  playback.rs  session.rs  stt.rs  tts.rs  vad.rs
crates/mbot-companion/src/learninglab/: experiments.rs  mod.rs
crates/mbot-companion/src/sorter/: calibration.rs  carousel.rs  color_detection.rs  error_handling.rs  mod.rs  nfc_storage.rs  sorting_algorithm.rs  sorting_loop.rs  type_classifier.rs  verification.rs  vision.rs
crates/mbot-companion/tests/: ble_transport_contracts.rs  patent_claims_integration.rs  sensor_fidelity_contracts.rs  voice_conversation_contracts.rs
crates/mbot-core/: Cargo.toml
crates/mbot-core/examples/: inventory_demo.rs
crates/mbot-core/src/: lib.rs
crates/mbot-core/src/artbot/: mod.rs  pen_control.rs  session.rs  shapes.rs  styles.rs
crates/mbot-core/src/coherence/: mod.rs
crates/mbot-core/src/exploration/: mod.rs
crates/mbot-core/src/gamebot/: chase.rs  emotions.rs  mod.rs  simon_says.rs  tictactoe_drawing.rs  turn_detection.rs
crates/mbot-core/src/helperbot/: color_detection.rs  inventory.rs  mod.rs  sorting.rs
crates/mbot-core/src/learning/: metrics.rs  mod.rs  policy.rs  prediction.rs  q_learning.rs  reward.rs
crates/mbot-core/src/learninglab/: mod.rs  telemetry.rs
crates/mbot-core/src/multi_robot/: collision.rs  mod.rs  swarm.rs
crates/mbot-core/src/nervous_system/: behavior.rs  conflict.rs  mod.rs  startle.rs  stimulus.rs  stimulus_log.rs  suppression.rs  upward.rs
crates/mbot-core/src/performance/: benchmarks.rs  metrics.rs  mod.rs  monitor.rs  optimizations.rs  profiler.rs
crates/mbot-core/src/personality/: behavior_mapping.rs  mod.rs  persistence.rs  presets.rs  quirks.rs  switching.rs
crates/mbot-core/tests/: ai_learning_test.rs  test_personality_quirks.rs  test_personality_simple.rs  test_personality_switching.rs
crates/mbot-core/tests/future/: test_personality_persistence.rs  test_personality_presets.rs  test_personality_quirks.rs
demos/: 30turn_trust_arc.py
docs/: AGENT_CONTROL_API_SPEC.md  ANIMATION_GUIDE.md  APP_GUIDES.md  CLOUD_SYNC_SETUP.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_INDEX.md  FINAL_DOCUMENTATION_SUMMARY.txt  IMPLEMENTATION_SUMMARY_85.md  IMPLEMENTATION_SUMMARY_EMAIL.md  ISSUE-37-COMPLETE.md  ISSUE_80_COMPLETE.md  JOURNEY_COVERAGE.md  JOURNEY_COVERAGE_TOOL.md  MASTER_GUIDE.md  NEURAL_VISUALIZER_IMPLEMENTATION.md  NEXT_ACTIONS.md  PRD.md  QUIRKS_IMPLEMENTATION.md  SIMON_SAYS_IMPLEMENTATION_SUMMARY.md  SPRINT_1_COMPLETION_REPORT.md  SPRINT_2_COMPLETION_REPORT.md  SPRINT_3_COMPLETION_REPORT.md  STORY-GAME-004-IMPLEMENTATION-SUMMARY.md  STORY-HELP-002-IMPLEMENTATION.md  STORY-PERS-004-IMPLEMENTATION.md  STORY-SORT-005-SUMMARY.md  SWARM_IMPLEMENTATION.md  TELEGRAM_BOT_CHECKLIST.md  TELEGRAM_BOT_IMPLEMENTATION_SUMMARY.md  TELEGRAM_BOT_KEY_SNIPPETS.md  TELEGRAM_BOT_README.md  VOICE_COMMAND_IMPLEMENTATION.md  WAVE_6_7_EXECUTION_STATUS.md  WAVE_6_7_FEATURES.md  WAVE_6_7_FINAL_STATUS.md  WAVE_6_7_PLAN.md  WAVE_6_7_QUICK_START.md  WAVE_6_7_SUMMARY.md  WAVE_6_7_VISUAL_TIMELINE.md  WEBSOCKET_V2.md  (+23 more)
docs2/: MBOT_GUIDE.md  cognitum-appliance-guide.md  cognitum-integration-architecture.md  cognitum-license-terms-draft.md  fionn-proof-brief.md  patent-hitl-checklist.md  ruvectorreadme.md
examples/: game-stats-usage.tsx
mobile/: .detoxrc.js  .eslintrc.js  .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TESTING_CHECKLIST.md  app.json  jest.config.js  package.json  tsconfig.json
playwright-report/: index.html
scripts/: create-wave-6-7-issues.sh  generate-journey-coverage.ts  (+5 more)
(+482 files in other folders)
