[workspace]
resolver = "2"
members = [
    "crates/mbot-core",
    "crates/mbot-companion",
    "crates/mbot-embedded",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"
repository = "https://github.com/Hulupeep/CCF"
authors = ["Hulupeep"]

[workspace.dependencies]
# RuVector dependencies (path to local ruvector)
ruvector-dag = { path = "../../tooling/ruvector/crates/ruvector-dag" }
ruvector-core = { path = "../../tooling/ruvector/crates/ruvector-core" }
ruvector-mincut = { path = "../../tooling/ruvector/crates/ruvector-mincut" }
sona = { path = "../../tooling/ruvector/crates/sona" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Bluetooth
btleplug = "0.11"

# Serial
serialport = "4.3"

# Utilities
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Brain layer dependencies
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
tokio-cron-scheduler = "0.10"
uuid = { version = "1.7", features = ["v4"] }
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }

# Chat channel dependencies
teloxide = { version = "0.12", features = ["macros"] }
serenity = { version = "0.12", features = ["client", "gateway", "model"] }

# BLE dependencies
futures = "0.3"

# Voice API HTTP server
warp = "0.3"

# .env file loading
dotenvy = "0.15"

# Voice pipeline dependencies
cpal = "0.15"
rodio = "0.19"
hound = "3.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
