[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "ccf-core"
version = "0.1.4"
description = "Contextual Coherence Fields — earned relational trust for AI systems. Patent pending US 63/988,438."
readme = "README.md"
license = {text = "BUSL-1.1"}
requires-python = ">=3.9"
keywords = ["trust", "AI", "LLM", "robotics", "relational", "coherence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.maturin]
# ccf-py has its own Cargo.toml at the root of ccf-py/
features = []
python-source = "python"
module-name = "ccf_core._ccf_core"
