[package]
name = "mbot-companion"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Laptop companion app for mBot2 - connects via Bluetooth/Serial"

[[bin]]
name = "mbot-companion"
path = "src/main.rs"

[[bin]]
name = "mbot-tictactoe"
path = "src/bin/tictactoe.rs"

[[bin]]
name = "mbot-draw"
path = "src/bin/draw.rs"

[features]
default = []  # No system dependencies by default
bluetooth = ["btleplug", "uuid", "futures"]  # Requires libdbus-1-dev
serial = ["serialport"]   # Requires libudev-dev
brain = ["reqwest", "rusqlite", "tokio-cron-scheduler", "uuid", "async-trait", "base64", "chrono"]
telegram = ["brain", "teloxide"]
discord = ["brain", "serenity"]
voice = ["brain", "cpal", "rodio", "hound"]
voice-api = ["brain", "warp", "futures"]

[dependencies]
mbot-core = { path = "../mbot-core" }

# Async
tokio.workspace = true

# Bluetooth (optional - requires system libs: libdbus-1-dev on Ubuntu)
btleplug = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

# Serial (optional - usually works out of the box)
serialport = { workspace = true, optional = true }

# Utilities
rand.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# CLI
clap = { version = "4.4", features = ["derive"] }
dotenvy.workspace = true

# Brain layer (optional - LLM integration, memory, autonomy)
reqwest = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
tokio-cron-scheduler = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

# Chat channels (optional)
teloxide = { workspace = true, optional = true }
serenity = { workspace = true, optional = true }

# Voice pipeline (optional)
cpal = { workspace = true, optional = true }
rodio = { workspace = true, optional = true }
hound = { workspace = true, optional = true }

# Voice API HTTP server (optional)
warp = { workspace = true, optional = true }
